# ChangeLog for perl-core/Test-Simple
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Simple/ChangeLog,v 1.18 2006/07/10 08:54:52 ian Exp $

  10 Jul 2006; Christian Hartmann <ian@gentoo.org>
  files/digest-Test-Simple-0.54, Manifest:
  Fixing digests

  10 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +Test-Simple-0.54.ebuild:
  resurect Test-Simple-0.54.ebuild since it's still used by
  dev-perl/Test-Builder-Tester

*Test-Simple-0.63 (10 Jul 2006)

  10 Jul 2006; Christian Hartmann <ian@gentoo.org>
  -Test-Simple-0.47-r1.ebuild, -Test-Simple-0.53.ebuild,
  -Test-Simple-0.54.ebuild, -Test-Simple-0.60.ebuild,
  +Test-Simple-0.63.ebuild:
  Version bump; removed obsolete versions

  25 Feb 2006; Joshua Kinard <kumba@gentoo.org> Test-Simple-0.62.ebuild:
  Marked stable on mips.

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> Test-Simple-0.62.ebuild:
  Mark 0.62 stable on alpha

  22 Jan 2006; Simon Stelling <blubb@gentoo.org> Test-Simple-0.62.ebuild:
  stable on amd64

  21 Jan 2006; Markus Rothe <corsair@gentoo.org> Test-Simple-0.62.ebuild:
  Stable on ppc64

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  Test-Simple-0.62.ebuild:
  Stable on ppc.

  14 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Test-Simple-0.62.ebuild:
  Marking sparc x86 stable

  17 Dec 2005; Chris White <chriswhite@gentoo.org>
  Test-Simple-0.47-r1.ebuild, Test-Simple-0.53.ebuild,
  Test-Simple-0.54.ebuild, Test-Simple-0.60.ebuild, Test-Simple-0.62.ebuild:
  Test-Harness -> perl dep change.

*Test-Simple-0.62 (03 Dec 2005)

  03 Dec 2005; Michael Cummings <mcummings@gentoo.org>
  +Test-Simple-0.62.ebuild:
  New version of Test-Simple. This version replaces both Test-Simple and
  Test-Buidler-Tester (merged)

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  Test-Simple-0.54.ebuild:
  Stable on ppc.

  12 Jun 2005; Bryan Østergaard <kloeri@gentoo.org>
  Test-Simple-0.54.ebuild: