@@ -1,6 +1,10 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Test-Simple-0.54.tar.gz 59185 RMD160 bd322710e909bb5106e1b735cd6d86944a6a28fb SHA1 e17a6e50f6494f2ae504e2f8edf7113593746792 SHA256 3194ad87c8c02ce1cb5d826276a9239597e65c027231548ceae78b1d52c55d9b
 DIST Test-Simple-0.62.tar.gz 70383 RMD160 3d8bf97a9a4a904f93abc902ffa18959ba81821a SHA1 d7f566c4ca22409d54368030b57ba07fb0e5137f SHA256 7118e549b3576aa0a3ba829f50070c3fc5d517aa714d78dcc983ac56a0957535
 DIST Test-Simple-0.63.tar.gz 71062 RMD160 36450760fd21402a190419ef4379fba75fdb7233 SHA1 253edc5fcc341af63f0706b6c5104aa5cf3f8b75 SHA256 ea8e9b59d41f4bf98dc8f89aca02faf76adcc86347b5252a55273a55ded9cc9b
+DIST Test-Simple-0.64.tar.gz 70874 RMD160 dfe88655a046b4034a592ea8bc5039771f78f098 SHA1 f275d266712d9fe7672fd3a5e023f67886eb0ee9 SHA256 4d06bff53e2f3bdcd8535898469a7c816d6b4067a5f586255049223bf1bb9883
 EBUILD Test-Simple-0.54.ebuild 618 RMD160 ad60e4b39564bcb7c3efac85e162b53744406f35 SHA1 73677806c9d17354fb272cbca5b48908b223ce86 SHA256 d6bc0085bdf89862cecce8152097396b9f5929c9558916f9f965491132196759
 MD5 1387dbea66283da7bec7f488ddd2cbe2 Test-Simple-0.54.ebuild 618
 RMD160 ad60e4b39564bcb7c3efac85e162b53744406f35 Test-Simple-0.54.ebuild 618
@@ -13,10 +17,14 @@ EBUILD Test-Simple-0.63.ebuild 625 RMD160 0e1bdd33e867c8921b507490af4f86649e190e
 MD5 76db28e65c4601588a7a68f4b6698927 Test-Simple-0.63.ebuild 625
 RMD160 0e1bdd33e867c8921b507490af4f86649e190e50 Test-Simple-0.63.ebuild 625
 SHA256 c2144d470b47fbbf61ee856b8bb959ab6658acdce8c763aea5a411868272571b Test-Simple-0.63.ebuild 625
-MISC ChangeLog 5993 RMD160 23718c806f1b37f1fee3dde6faea1f9423983a44 SHA1 41c05787921a617f0db8ecb927980992e6fd197e SHA256 6bab8d576f6775fef0742429267bc4636adb59d37fb058c974c4e5bc8f85f585
-MD5 7f631759898986478f56731a13fea302 ChangeLog 5993
-RMD160 23718c806f1b37f1fee3dde6faea1f9423983a44 ChangeLog 5993
-SHA256 6bab8d576f6775fef0742429267bc4636adb59d37fb058c974c4e5bc8f85f585 ChangeLog 5993
+EBUILD Test-Simple-0.64.ebuild 631 RMD160 0704d380193cf05bdde657845098976984704926 SHA1 b1f3f8bb020bf4a98bae7845a7362cdec65919df SHA256 c4a758b1ad948e408899ed08c60c8257dcbd45bfd1023bfe983f4c92e1d67fd2
+MD5 d20b95ddc3234741c333c34ddac81f01 Test-Simple-0.64.ebuild 631
+RMD160 0704d380193cf05bdde657845098976984704926 Test-Simple-0.64.ebuild 631
+SHA256 c4a758b1ad948e408899ed08c60c8257dcbd45bfd1023bfe983f4c92e1d67fd2 Test-Simple-0.64.ebuild 631
+MISC ChangeLog 6131 RMD160 d6f2f657e5c9bcb1dd432e7362f46ecf09bae148 SHA1 4b95985649122c6ccb6aef03dd311b52842ae6c5 SHA256 132c9daf8f1548add5e03afb7006ebaca60582f9e161409188376ae9bd007b43
+MD5 3c971c6240f69b226bd2bfc6a6410b42 ChangeLog 6131
+RMD160 d6f2f657e5c9bcb1dd432e7362f46ecf09bae148 ChangeLog 6131
+SHA256 132c9daf8f1548add5e03afb7006ebaca60582f9e161409188376ae9bd007b43 ChangeLog 6131
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -30,3 +38,13 @@ SHA256 98c1470a5a487cda9929c072f3a731584bbe58a48fae393fb010cf2eaaf5677f files/di
 MD5 e9da11c663d1f1d9f75fe8edc9bd7046 files/digest-Test-Simple-0.63 247
 RMD160 19280f65b83ebb90e3ac15bd1c3e9978f40d38e4 files/digest-Test-Simple-0.63 247
 SHA256 2fc3b53bdf749cb264b0f8948901c1fda83506b1d5ad95704e880bbaebeb610f files/digest-Test-Simple-0.63 247
+MD5 bacdf659a58a69bb1541af3043f1c5b1 files/digest-Test-Simple-0.64 247
+RMD160 bf4cbc36d2972176ea03581f51b0b62f4e7417ba files/digest-Test-Simple-0.64 247
+SHA256 99af2a2e29e3dac81630cb8799c1d8f8094a2a6b8626efbd926ac5bf5c952cda files/digest-Test-Simple-0.64 247
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.4 (GNU/Linux)
+
+iD8DBQFEwvJptG5z4I8BtQoRAtEBAJ4/KvFYz2N0IrR+5ZsQbTuRa6JDzgCfUWws
+fJDtl1u68W5eePaqwiz9zes=
+=7gf9
+-----END PGP SIGNATURE-----
