@@ -1,0 +1,3 @@
+MD5 e22dcd4f06eed7b389f2bd0d17ed4dc1 Test-Simple-0.64.tar.gz 70874
+RMD160 dfe88655a046b4034a592ea8bc5039771f78f098 Test-Simple-0.64.tar.gz 70874
+SHA256 4d06bff53e2f3bdcd8535898469a7c816d6b4067a5f586255049223bf1bb9883 Test-Simple-0.64.tar.gz 70874
