@@ -1,6 +1,12 @@
 # ChangeLog for perl-core/Test-Simple
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Simple/ChangeLog,v 1.18 2006/07/10 08:54:52 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Simple/ChangeLog,v 1.19 2006/07/23 03:51:50 mcummings Exp $
+
+*Test-Simple-0.64 (23 Jul 2006)
+
+  23 Jul 2006; Michael Cummings <mcummings@gentoo.org>
+  +Test-Simple-0.64.ebuild:
+  Version bump
 
   10 Jul 2006; Christian Hartmann <ian@gentoo.org>
   files/digest-Test-Simple-0.54, Manifest:
